Fixed loading text behind loading screen

--- a/css/app.css
+++ b/css/app.css
@@ -218,6 +218,7 @@ p.loading-text {
     font-size: 28px;
     margin-top: 50px;
     text-indent: 30px;
+    z-index:99;
 }
 
 .load-anim {
@@ -270,7 +271,7 @@ p.loading-text {
     width: 100%;
     height: 100%;
     background-color: rgba( 150, 150, 150, 0.5 );
-    z-index: 99;
+    z-index: 98;
 }
 
 /* Tooltip styles, taken from http://bl.ocks.org/Caged/6476579 */
